# Light-Field-Codec

./: .gitignore  CMakeLists.txt  README.md  run.sh  run_codec.sh  test.txt
Scripts/: simulation.py
src/: ArithmeticEncoder.cpp  ArithmeticEncoder.h  ArithmeticEntropyEncoder.cpp  ArithmeticEntropyEncoder.h  ArithmeticStructures.h  EncBitstreamBuffer.cpp  EncBitstreamWriter.cpp  EncBitstreamWriter.h  EncSymbol.cpp  EncSymbol.h  EncodeSymbol.cpp  EncodeSymbol.h  EncodeSymbolsModel.cpp  EncodeSymbolsModel.h  EncoderParameters.cpp  EncoderParameters.h  EntropyEncoder.cpp  EntropyEncoder.h  EntropyLRE.cpp  EntropyLRE.h  EntropyReport.h  EntropyStructsModel.h  LRE.cpp  LRE.h  LightField.cpp  LightField.h  LightFieldMetrics.h  MultilevelEntropyEncoder.cpp  MultilevelEntropyEncoder.h  Point4D.cpp  Point4D.h  Prediction.cpp  Prediction.h  Quantization.cpp  Quantization.h  ScanOrder.cpp  ScanOrder.h  Statistics.cpp  Statistics.h  SubpartitionModel.cpp  (+12 more)
test/: CMakeLists.txt
test/old_api_comparison/: OldAPITest.cpp
test/partial_block_transform/: PartialBlockTransformTest.cpp
